# OSCode

./: .gitmodules
DOS/: .gitignore  Makefile  compile_flags.txt  dos_api.h  intr.c  modern.h  subfuncs.h
DOS/dos_api/: bios_api.c  bios_api.h  common.h  dos_api.c  dos_api.h  funcs.h  subfuncs.h
DOS/doxygen/: Doxyfile
DOS/include/: modern.h
concurrency/: .gitignore  CommunicatingThread.cc  Makefile  RunSimpleThread.cc  SimpleThread.cc  SimpleThread.hh  SimpleThread.java  SimpleThreadPosix.cc  SimpleThreadWin32.cc
unix/: CMakeLists.txt
unix/include/: file_desc.h  file_poll.h  test_utils.h
unix/src/: data_buffer.c  data_buffer.h  dyn_cstr.c  dyn_cstr.h  error_handling.c  errors.h  file_desc.c  file_desc.h  file_poll.c  file_poll.h  fileio.c  fileio_sigasyncio.c  glibc_version.c  test_utils.c  test_utils.h  timespan.h  user_group.c  util.h
win32/: .gitignore  CMakeLists.txt
win32/include/: config.h  winallocator.h  winerror.h  winfile.h  winhandle.h
win32/include/olecom/: allocator.h
win32/lib/gnulib/: Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac  gnu_config.h  gnu_config.h.in
win32/lib/gnulib/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
win32/lib/gnulib/lib/: Makefile.am  Makefile.in
win32/lib/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
win32/lib/include/win32/: errors.h  processes.h
win32/lib/src/: errors.cpp  processes.cpp
win32/src/: CMakeLists.txt  ConsoleUtility.c  ConsoleUtility.h  CreateProcess.cpp  ReportError.c  ReportError.h  cat.c  console_ctrl.c  console_test.c  cp.c  io_behavior_test.c  pwd.c  system_info.c  win32_allocators.c  winerror.c  winfile.c  winhandle.c
win32/src/win32/: errors.cpp
win32/toolchains/: llvm-mingw-aarch64.cmake  llvm-mingw-x86_64.cmake  mingw-i686.cmake
win32/vcsrc/: CMakeLists.txt  except_gen.cpp  to_upper.cc
